// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SITEMAP_UPLOADER_TARGET=preprod kosko generate --prod jobs/sitemap-uploader 1`] = `
"---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod
    app.gitlab.com/env.name: prod
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/update-strategy: fallback-on-replace
  labels:
    application: cdtn-admin
    component: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-preprod
  name: sitemap-uploader-preprod
  namespace: cdtn-admin
spec:
  backoffLimit: 3
  template:
    metadata:
      name: sitemap-uploader-preprod
      annotations:
        app.gitlab.com/app: socialgouv-cdtn-admin
        app.gitlab.com/env: prod
        app.gitlab.com/env.name: prod
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        kapp.k14s.io/deploy-logs: for-new-or-existing
      labels:
        application: cdtn-admin
        component: cdtn-admin
        owner: cdtn-admin
        team: cdtn-admin
        app: sitemap-uploader-preprod
    spec:
      restartPolicy: OnFailure
      containers:
        - name: az-sitemap-uploader
          image: mcr.microsoft.com/azure-cli:2.9.1
          command:
            - bash
          args:
            - '-c'
            - |+

              echo \\"Fetch sitemap from $SITEMAP_ENDPOINT?baseurl=$BASE_URL\\"

              curl --fail -L $SITEMAP_ENDPOINT?baseurl=$BASE_URL -o sitemap.xml

              if [[ -f sitemap.xml ]]; then
                # upload
                echo \\"Upload sitemap to azure/$DESTINATION_CONTAINER/$DESTINATION_NAME\\"
                az storage blob upload --account-name $AZ_ACCOUNT_NAME --account-key $AZ_ACCOUNT_KEY --container-name $DESTINATION_CONTAINER --file sitemap.xml --name $DESTINATION_NAME
              else
                echo \\"Cannot fetch sitemap.xml, abort\\"
                exit 1
              fi

          env: []
          envFrom:
            - configMapRef:
                name: sitemap-uploader-preprod
            - secretRef:
                name: sitemap-uploader-preprod
---
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: sitemap-uploader-preprod
  namespace: cdtn-admin
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod
    app.gitlab.com/env.name: prod
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    application: cdtn-admin
    component: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-preprod
spec:
  encryptedData:
    AZ_ACCOUNT_KEY: >-
      AgCUoUtuRG5U38xEYpHtIP1qhXrgWPLSX3oRwLmZd9NduX1ZthgEHcdGXDiAPRA+KlLIgNrWzef+mOORXZrcktdtBQyYuxFUYuWrOefQADsCo37TrxReE2ogbpWBjfdnSrF4ITU5OuMXHaYW+APDd/FBX1ZcqSoQl2R+0EmwnBA5NOxZ6NbrIiQYo7sjUmUayIG+4GoTuYF9t4dCnhQ0g8/HM/Sx6NpYmUhsuFyQGWiUgVsyF8wSNL1f+vFVwVraREocaOFFl3YMWwyKha32R2skI8IQAyWrjeNH64zWQeTN46IMJF16MheF295G7hIkwIYsTy1MNnsfajWuW2fI4+NYD044LeGA/o+05Oz2fb634ikrShhAD1EO3Uf05GHCXfeYkFDjt8hMxV1LQxjqfUS4JcGC9Vcgb0XjhJ+Z1+HOaWAu1GaRgdtBpwpFib2M5p7Frj6zmjc2uFhrbfs/s+YuIcPyTcAXlLB8usZZePupweEHkuhqH1parzv0Tn46y5JZ1EBrxN1Fx6YQOpnK4HG20LZGNR9VeSXTM4I1Lo3sY78G4MHvpOt/J7Y0BoitRaFLuDlE4tLZh9FeRlbuZb1ZSOkYbqOGlyZj3JSABiWwMr0q2iFG/ibwLl3vBd/0A64rLj6lTAM5Vvc9EP6XCiqXzhXKX2wqS76dQbu3FQFxMNtlunNDfKfO0JEBlCC5MAwRCRj4ETUaCu74+sWBU9gNXQC6PW5Dh/Z3lHMFkfjRzYDXEBsn8nGnWLob3U+Ua9/8Jo6kJlA37oMRwW3WglYGsYS2fsV0tc28uE3eE+wmyvZpG+9QaNX5
    AZ_ACCOUNT_NAME: >-
      AgBz5scSSSJb3Ja9dFq/24jE/qi4KCbS3bpS6duDRbaSBKbDVbxymSJyIy3WoiCqYINyD1PJwxI4n8up6N0VoMn+aB9JGARbZZpu4tbh06kCpQJNNVFEn5zWmYz/PetdsW0zUK67EQSUx8lJ9ATAFsB/BsrJQF+hDLiseEen5pkPBQPVUhMXLAZPousnMZlcjpa5gD+d1AB/Q7gbUGkxkYCuYUIX28M8A1Zj3uMxT2nxE9gf02BYqfoei+p/4CrIbwZIGncg/gk3ROXCJXWEMCRGV9dAAghWl5mkAaaSoJPzVedp+W86TttWsY6cPj4+LWkHNpQ3eP0bRziZ8IdtS2H4CfJ8wtg+XK9oFguGvWyh74+fL1QAhLKOXW1VfyJcrROD9SsifT9EtvxiRgWzufR3E/cU5s14t1ocTC1TR/wwL/0cC/D1vGNOsl1WsIe6uFI2Tb+XCqCi4wSmBK//5SKWUDvPR51XdMbcp6GKCRZQ3GzOTemrtT1ssZZjMYWCO2vd8DwFyaOWjZXux4aovBrXBgJnJRvqkT2czDwk2fd5ykqHPMROT7CvUKrkRQpKmV4K9jtVAGHBM2o10QHWtUdbNoxOiUeqH7etpzm1RGptDWV2i9Xr/XGuCB5UuucU56I5RbJFp+zVSYAm1X7UxQw16aeYnpajtRsdZnhvcdXQS8xCDnovwVdQFmUw0CFXQeQzZbof9f3z7zQootM=
  template:
    metadata:
      name: sitemap-uploader-preprod
      namespace: cdtn-admin
      annotations:
        app.gitlab.com/app: socialgouv-cdtn-admin
        app.gitlab.com/env: prod
        app.gitlab.com/env.name: prod
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        application: cdtn-admin
        component: cdtn-admin
        owner: cdtn-admin
        team: cdtn-admin
        app: sitemap-uploader-preprod
    type: Opaque
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: sitemap-uploader-preprod
  namespace: cdtn-admin
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod
    app.gitlab.com/env.name: prod
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    application: cdtn-admin
    component: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-preprod
data:
  BASE_URL: https://preprod-code-du-travail-numerique.dev.fabrique.social.gouv.fr
  DESTINATION_CONTAINER: sitemap
  DESTINATION_NAME: sitemap-preprod.xml
  SITEMAP_ENDPOINT: http://www/api/sitemap
"
`;

exports[`SITEMAP_UPLOADER_TARGET=prod kosko generate --prod jobs/sitemap-uploader 1`] = `
"---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod
    app.gitlab.com/env.name: prod
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/update-strategy: fallback-on-replace
  labels:
    application: cdtn-admin
    component: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-prod
  name: sitemap-uploader-prod
  namespace: cdtn-admin
spec:
  backoffLimit: 3
  template:
    metadata:
      name: sitemap-uploader-prod
      annotations:
        app.gitlab.com/app: socialgouv-cdtn-admin
        app.gitlab.com/env: prod
        app.gitlab.com/env.name: prod
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        kapp.k14s.io/deploy-logs: for-new-or-existing
      labels:
        application: cdtn-admin
        component: cdtn-admin
        owner: cdtn-admin
        team: cdtn-admin
        app: sitemap-uploader-prod
    spec:
      restartPolicy: OnFailure
      containers:
        - name: az-sitemap-uploader
          image: mcr.microsoft.com/azure-cli:2.9.1
          command:
            - bash
          args:
            - '-c'
            - |+

              echo \\"Fetch sitemap from $SITEMAP_ENDPOINT?baseurl=$BASE_URL\\"

              curl --fail -L $SITEMAP_ENDPOINT?baseurl=$BASE_URL -o sitemap.xml

              if [[ -f sitemap.xml ]]; then
                # upload
                echo \\"Upload sitemap to azure/$DESTINATION_CONTAINER/$DESTINATION_NAME\\"
                az storage blob upload --account-name $AZ_ACCOUNT_NAME --account-key $AZ_ACCOUNT_KEY --container-name $DESTINATION_CONTAINER --file sitemap.xml --name $DESTINATION_NAME
              else
                echo \\"Cannot fetch sitemap.xml, abort\\"
                exit 1
              fi

          env: []
          envFrom:
            - configMapRef:
                name: sitemap-uploader-prod
            - secretRef:
                name: sitemap-uploader-prod
---
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: sitemap-uploader-prod
  namespace: cdtn-admin
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod
    app.gitlab.com/env.name: prod
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    application: cdtn-admin
    component: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-prod
spec:
  encryptedData:
    AZ_ACCOUNT_KEY: >-
      AgAl7DuMe9vgOiyRZ/QsrQ5ez0VRGBud6OUp1mPyd50LovbzTcu0l8Xtwp1myfbbEWW5w/kk323j6oP29aSngSaib7yFYtva+C1WGUnnSofPJxbnhSifKxuW9UhfrLQr2fP8KcYEI2tVi/u+DNHQVDrwmBZ5WHZTUL7YU826y5pezLa4BjRdAaNnt2Z/HINkKBQVv9JODYSAhhVHzWDkuI4FMwmmUcpmQXtgWqs3ic6+87fNknZhISrPWDk2mu09EW0lPAq9e/PGUOtHp2bUiKZethnFswZCspvHN17jIDmsNyVJyciKLqG2/0a2J059Ze0d/zl+7r5aCMdDdyLPxIRp8p7qdvzkVkaIWTJMwnIgfZBiANOEcow4P/BGiGMdA2MQVuhdDFJgxqRC68ORV6uG128lStm7jLCXBU5Q2i3xOerNYqTHKLzSzUrXpA4vgGgkq5+5oUMMCOxLnmlBfB2GLa+gKry8akLFiGfFkv3bw2qNHsq8slMiJS7kWSy8C2WTCYfxnBu5eZaxUwlOmn/LUpwLEcmxmi9GhVrTLf3XpBaqyo2JT2hujSotkNCR6m54OqyTXrpE08eECLwzR3HTwmuepkanH1t8ir9FwgFs7VprdErCSfoLWQLP+D6/xyplV3oGxsODxmxzRWdgUGQs5TmO3T8g65bL5u0tBjWAAePl2gD52Mk8YeC2lz506OgsFQJfG6lLXoPzpqTu6a5N7zCn6YWh0En8vv+ZaQPAC8egSuketGCSBxq6ZUwS2dtek+h+UL9Sx+xEH8a0cwBG6R8n3XeOM0oUyFZlF/bM3cfdU8EaFO7E
    AZ_ACCOUNT_NAME: >-
      AgCJvxdaZZGo/IQG2YZzrLuvO38O0LKMao2a14f8T1OOip3fZU2KvdM3/7siIqI8n+QI57HQimV1gTvHxYljFfTBVQqoolocJWzTycfkGYOpSxBfL5fpanDcfSjCH41CNvLns/tH9Pwpwml3bGcHum3RGSkgxrEvrSPXCxNXAgFNg5rVtWnjLmWJxLDyCFNe8ZnJ7Ik8DqPe+FVJagRb554NPeAl/Acm3/KMepupx3Nh3EsEcxSC/Dsmrr3NW1Pen6hE3ktoZTM2v+VLrstezPYZYnW61glXiFVZmrNBpEMSYjHrZOm96DamuWK6ZQI4siGkq0JSrXpXe8EqONEh5AxlHokrI1NqJEkZYST95AfhNaPhzvik6U5g/PnP9f3Af7O+iRpAB+OaFBL0P0znfXA9NiRE3weLnyOpJqRmpDKQ/eq/5F4ZJwFEnl53MOWJA4NrSWNQWn3LVkIwhTU6sfzmHvygGHfFhFLxO1RBvgHSaQWWbFF5Z9CTK/LTihkZizdcLfrB1wN/8Y/53rFwEfNHOirZRXkJvhR4SF6jAA89vN1/jS6xRYr1aCVCN5nDc3p7/QYYaYQTUf4ZQBfoADUT7E9SBvO2K2+u3S2E8z254ooRL2o8IIuLTkqkLr+ftEAXczEVMHRbsLDfoonHr4OeMq0suflhsl/dR7DJ3rsk5mKbcmCg/OaS///LOZp7QLfQzHRqCs78yULkviHC
  template:
    metadata:
      name: sitemap-uploader-prod
      namespace: cdtn-admin
      annotations:
        app.gitlab.com/app: socialgouv-cdtn-admin
        app.gitlab.com/env: prod
        app.gitlab.com/env.name: prod
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        application: cdtn-admin
        component: cdtn-admin
        owner: cdtn-admin
        team: cdtn-admin
        app: sitemap-uploader-prod
    type: Opaque
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: sitemap-uploader-prod
  namespace: cdtn-admin
  annotations:
    app.gitlab.com/app: socialgouv-cdtn-admin
    app.gitlab.com/env: prod
    app.gitlab.com/env.name: prod
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    application: cdtn-admin
    component: cdtn-admin
    owner: cdtn-admin
    team: cdtn-admin
    app: sitemap-uploader-prod
data:
  BASE_URL: https://code.travail.gouv.fr
  DESTINATION_CONTAINER: sitemap
  DESTINATION_NAME: sitemap.xml
  SITEMAP_ENDPOINT: http://www/api/sitemap
"
`;
